Update alert notification plan to free
Free plan should be there by default

--- a/code/charts/alert-notification/values.yaml
+++ b/code/charts/alert-notification/values.yaml
@@ -5,7 +5,7 @@ global:
 alert_notification:
   fullnameOverride: alert-notification
   serviceOfferingName: alert-notification
-  servicePlanName: standard
+  servicePlanName: free
   parameters:
     configuration:
       actions:
