Change health check and cookie to header

--- a/code/router/xs-app.json
+++ b/code/router/xs-app.json
@@ -2,15 +2,9 @@
     "welcomeFile": "/sapsusaasuipublicflp/",
     "authenticationMethod": "route",
     "logout": {
-      "logoutEndpoint": "/do/logout"
+      "logoutEndpoint": "/logout"
     },
     "routes": [
-      {
-        "source": "^/healthz$",
-        "localDir": "./",
-        "target": "/health.html",
-        "authenticationType": "none"
-      },
       {
         "source": "^/user-api(.*)",
         "target": "$1",
