Changes to onboarding service

--- a/code/obd/app/ui-home/webapp/manifest.json
+++ b/code/obd/app/ui-home/webapp/manifest.json
@@ -71,7 +71,10 @@
         "viewPath": "sap.susaas.ui.home.view",
         "controlAggregation": "pages",
         "controlId": "app",
-        "clearControlAggregation": false
+        "clearControlAggregation": false,
+        "bypassed": {
+          "target": "TargetMainView"
+        }
       },
       "routes": [
         {
