--- a/code/obd/charts/charts/obd-router/values.yaml
+++ b/code/obd/charts/charts/obd-router/values.yaml
@@ -5,9 +5,11 @@ global:
   component: router
   domain: 
   gateway: 
-  obd:
+  srv:
     fullName: 
     port: 
+  saasRelease:
+  saasRouter:
 
 port: 5000
 
