--- a/code/obd/router/xs-app.json
+++ b/code/obd/router/xs-app.json
@@ -1,16 +1,20 @@
 {
     "welcomeFile": "/sapsusaasuihome/",
     "authenticationMethod": "route",
+    "login": {
+      "callbackEndpoint": "/login/callback"
+    },
     "routes": [
+      {
+        "source": "^/login$",
+        "target": "/v2/catalog/OnboardService/login()",
+        "destination": "obd-api",
+        "authenticationType": "ias"
+      },
       {
         "source": "^(/sapsusaasuihome/.*)$",
         "service": "html5-apps-repo-rt",
         "authenticationType": "none"
-      },
-      {
-        "source": "^(/.*)$",
-        "service": "html5-apps-repo-rt",
-        "authenticationType": "ias"
       }
     ]
   }
