--- a/code/obd/app/ui-home/xs-app.json
+++ b/code/obd/app/ui-home/xs-app.json
@@ -3,6 +3,18 @@
   "authenticationMethod": "route",
   "routes": [
     {
+      "source": "^/catalog/(.*)$",
+      "target": "/catalog/$1",
+      "destination": "obd-api",
+      "authenticationType": "ias"
+    },
+    {
+      "source": "^/v2/catalog/(.*)$",
+      "target": "/v2/catalog/$1",
+      "destination": "obd-api",
+      "authenticationType": "ias"
+    },
+    {
       "source": "^(.*)$",
       "service": "html5-apps-repo-rt",
       "authenticationType": "none"
