--- a/code/obd/srv/package.json
+++ b/code/obd/srv/package.json
@@ -15,7 +15,8 @@
     "@kubernetes/client-node": "^0.18.1",
     "passport": "^0.6.0",
     "express":"^4.18.2",    
-    "crypto":"^1.0.1"
+    "crypto":"^1.0.1",
+    "cookie-parser": "^1.4.6"
   },
   "scripts": {
     "start": "cds run --production"
