Minor changes to simplify routing

--- a/code/obd/router/xs-app.json
+++ b/code/obd/router/xs-app.json
@@ -15,6 +15,11 @@
         "source": "^(/sapsusaasuihome/.*)$",
         "service": "html5-apps-repo-rt",
         "authenticationType": "none"
+      },
+      {
+        "source": "^(/sapsusaasuionboarding/.*)$",
+        "service": "html5-apps-repo-rt",
+        "authenticationType": "ias"
       }
     ]
   }
