--- a/code/obd/charts/charts/obd-router/templates/istio-virtual-service.yaml
+++ b/code/obd/charts/charts/obd-router/templates/istio-virtual-service.yaml
@@ -1,4 +1,6 @@
 {{ if .Values.expose.enabled}}
+{{- $onboardingHost := printf "%s.%s.svc.cluster.local" ( default ( printf "%s-%s" .Release.Name "router" ) .Values.global.router.fullName ) .Release.Namespace -}}
+{{- $applicationHost := printf "%s.%s.svc.cluster.local" ( printf "%s-%s" ( default "susaas" .Values.global.saasRelease ) (default "router" .Values.global.saasRouter)) .Release.Namespace -}}
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
@@ -8,57 +10,62 @@ spec:
   gateways:
     - {{ .Values.global.gateway | default "kyma-system/kyma-gateway"  }}
   hosts:
-    - {{ printf "%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace $.Values.global.domain }}
+    # Application domain like susaas.sap-demo.com
+    - {{ printf "%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
+    # Onboarding domain like onboarding-susaas.sap-demo.com
+    - {{ printf "onboarding-%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
   http:
+
+    # Handler for all requests targeting the SaaS application
     - match:
-        - uri:
-            regex: ^.*(sapsusaasuipublic).*$
-          headers:
-            Cookie:
-              regex: ^.*(x-custom-host=).*$
-        - uri:
-            regex: ^.*(sapsusaasuiadmin).*$
-          headers:
-            Cookie:
-              regex: ^.*(x-custom-host=).*$
-        - queryParams:
-            authType:
-              exact: xsuaa
-          uri:
-            regex: ^.*(login).*$
+      - uri:
+          regex: ^.*(sapsusaasuipublic|sapsusaasuiadmin).*$
+        headers:
+          Cookie:
+            regex: ^.*(x-custom-host=).*$
+      - uri:
+          regex: ^.*(login).*$
+        queryParams:
+          authType:
+            exact: xsuaa
       route:
         - destination:
-            host: {{ printf "%s.%s.svc.cluster.local" ( printf "%s-%s" ( default "susaas" .Values.global.saasRelease ) (default "router" .Values.global.saasRouter)) .Release.Namespace  }}
+            host: {{ $applicationHost }} 
             port:
               number: 5000
           weight: 100
       timeout: 30s
+    
+    # Handler for the onboarding application ensuring a domain switch
     - match:
-        - uri:
-            exact: /
-        - uri:
-            regex: ^.*(login).*$
-        - uri:
-            regex: ^.*(sapsusaasuionboarding).*$
-        - uri:
-            regex: ^.*(sapsusaasuihome).*$
+      - uri:
+          regex: ^.*(sapsusaasuionboarding).*$
+        authority:
+          exact: {{ printf "%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
+      redirect:
+        authority: {{ printf "onboarding-%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
+    
+    # Handler for all requests targeting the onboarding router/apps
+    - match:
+      - uri:
+          regex: ^.*(login|sapsusaasuihome|sapsusaasuionboarding).*$
       route:
         - destination:
-            host: {{ printf "%s.%s.svc.cluster.local" ( default ( printf "%s-%s" .Release.Name "router" ) .Values.global.router.fullName ) .Release.Namespace  }} 
+            host: {{ $onboardingHost }}  
             port:
               number: 5000
           weight: 100
       timeout: 30s
+
+    # Handler for all other requests
     - match:
-        - uri:
-            regex: ^.*(sapsusaasuipublic).*$
-        - uri:
-            regex: ^.*(sapsusaasuiadmin).*$
+      - uri:
+          regex: .*
       rewrite:
-        uri: " "
+        uri: /
       route:
         - destination:
-            host: {{ printf "%s.%s.svc.cluster.local" ( default ( printf "%s-%s" .Release.Name "router" ) .Values.global.router.fullName ) .Release.Namespace  }} 
+            host: {{ $onboardingHost }}  
             port:
               number: 5000
           weight: 100
