--- a/code/obd/package.json
+++ b/code/obd/package.json
@@ -11,26 +11,24 @@
     "node": "^16.x"
   },
   "dependencies": {
-    "@sap/approuter": "^14.1.1",
-    "@sap/cds": "^6.6.1",
-    "@sap/cds-odata-v2-adapter-proxy": "^1.9.18",
-    "@sap/xsenv": "^3.4.0",
+    "@sap/cds": "^6.8.1",
+    "@sap/cds-odata-v2-adapter-proxy": "^1",
+    "@sap/xsenv": "^3",
     "@sap/xssec": "^3.2.17",
-    "@kubernetes/client-node": "^0.18.0",
+    "@kubernetes/client-node": "^0.18.1",
     "passport": "^0.6.0",
-    "crypto": "^1.0.1"
+    "express":"^4.18.2",    
+    "crypto":"^1.0.1",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
+    "@sap/approuter": "^14.1.1",
     "@sap/cds-dk": "^6.6.1",
     "@sap/html5-repo-mock": "^2.1.1",
     "@sap/ui5-builder-webide-extension": "^1.1.8",
     "@sap/html5-app-deployer": "^4.2.3",
     "@sap/ux-specification": "^1.96.4",
     "@ui5/cli": "^2.14.14",
-    "axios": "^0.27.2",
-    "chai": "^4.3.7",
-    "chai-as-promised": "^7.1.1",
-    "chai-subset": "^1.6.0",
     "cross-var": "^1.1.0",
     "jest": "^29.0.1",
     "mbt": "^1.2.18",
