--- a/code/obd/srv/package.json
+++ b/code/obd/srv/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "repository": "https://github.com/sap-samples/btp-kyma-cap-multitenant-susaas",
   "license": "Apache License 2.0",
-  "description": "Sustainable SaaS Onboarding Srv",
+  "description": "SaaS Onboarding Srv",
   "engines": {
     "node": "^16.x"
   },
   "dependencies": {
-    "@sap/cds": "^6.6.1",
+    "@sap/cds": "^6.8.1",
     "@sap/cds-odata-v2-adapter-proxy": "^1",
     "@sap/xsenv": "^3",
-    "@sap/xssec": "^3.2.15",
+    "@sap/xssec": "^3.2.17",
     "@kubernetes/client-node": "^0.18.1",
     "passport": "^0.6.0",
     "express":"^4.18.2",    
@@ -27,7 +27,6 @@
         "kind": "ias"
       },
       "auth": {
-        "strategy": "JWT",
         "kind": "ias"
       }
     }
