--- a/code/obd/charts/charts/obd-router/templates/istio-virtual-service.yaml
+++ b/code/obd/charts/charts/obd-router/templates/istio-virtual-service.yaml
@@ -15,32 +15,7 @@ spec:
     # Onboarding domain like onboarding-susaas.sap-demo.com
     - {{ printf "onboarding-%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
   http:
-    # Handler for all requests targeting the mulitenant SaaS application
-    # Requests require the x-custom-host cookie to determine the tenant host
-    - match:
-      - uri:
-          regex: ^.*(sapsusaasuipublic|sapsusaasuiadmin).*$
-        headers:
-          Cookie:
-            regex: ^.*(x-custom-host=).*$
-      # Handle all xsuaa logins via the mulitenant SaaS application router
-      - uri:
-          regex: ^.*(login).*$
-        queryParams:
-          authType:
-            exact: xsuaa
-        headers:
-          Cookie:
-            regex: ^.*(x-custom-host=).*$
-      route:
-        # Route targeting the mulitenant SaaS application router 
-        - destination:
-            host: {{ $applicationHost }} 
-            port:
-              number: 5000
-          weight: 100
-      timeout: 30s
-    
+
     # Handler for the onboarding application ensuring a domain switch
     # Onboarding UI has to be handled by a different 
     - match:
@@ -50,11 +25,38 @@ spec:
           exact: {{ printf "%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
       redirect:
         authority: {{ printf "onboarding-%s-%s.%s" ( default "susaas" .Values.global.saasRelease ) .Release.Namespace .Values.global.domain }}
+
+    # Handler for all requests targeting the mulitenant SaaS application
+    # Requests require the x-custom-host cookie to determine the tenant host
+    - match:
+      - headers:
+          Cookie:
+            regex: ^.*(x-custom-host=).*$
+        uri:
+          regex: ^.*(sapsusaasuipublic|sapsusaasuiadmin|user-api).*$
+      # Handle all xsuaa logins via the mulitenant SaaS application router
+      - queryParams:
+          authType:
+            exact: xsuaa
+        uri:
+          prefix: /login/callback
+      route:
+        # Route targeting the mulitenant SaaS application router 
+        - destination:
+            host: {{ $applicationHost }} 
+            port:
+              number: 5000
+          weight: 100
+      timeout: 30s
     
     # Handler for all requests targeting the onboarding router/apps
     - match:
       - uri:
-          regex: ^.*(login|sapsusaasuihome|sapsusaasuionboarding).*$
+          regex: ^.*(sapsusaasuihome|sapsusaasuionboarding).*$
+      - uri:
+          prefix: /login/callback
+      - uri:
+          exact: /login
       route:
         - destination:
             host: {{ $onboardingHost }}  
