--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -12,12 +12,11 @@ service:
         - name: "DockerAuth"
           credentialId: "docker-auth-susaas"
       runFirst:
-        command: "apk update &&\ 
-          \ apk add curl sudo docker openrc && rc-update add docker boot &&\
+        command: "apk add --update curl sudo podman openrc && sudo mount --make-rshared \/ && podman system service && export DOCKER_HOST=\"unix:/run/user/0/podman/podman.sock\" && \
           \ docker login -u=\"$DockerAuth_user\" -p=\"$DockerAuth_password\" &&\ 
           \ (curl -sSL \"https://github.com/buildpacks/pack/releases/download/v0.29.0/pack-v0.29.0-linux.tgz\"| sudo tar -C /usr/local/bin/ --no-same-owner -xzv pack) &&\ 
           \ cd code && npm i -g @sap/cds-dk --save && npm i @sap/cds-common-content --save &&\ 
-          \ cds build --production &&\
+          \ cds build --production && service docker status &&\
           \ pack build $DockerAuth_user/susaas-srv --path gen/srv --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs --env BP_NODE_RUN_SCRIPTS= --publish "
 stages:
   Build:
