--- a/code/package.json
+++ b/code/package.json
@@ -14,9 +14,9 @@
     "@kubernetes/client-node": "^0.18.0",
     "@sap_oss/alert-notification-client": "^1.4.0",
     "@sap/approuter": "^14.1.1",
-    "@sap/cds": "^6.8.1",
+    "@sap/cds": "^6.8.4",
     "@sap/cds-common-content": "^1.0.1",
-    "@sap/cds-mtxs": "^1.8.1",
+    "@sap/cds-mtxs": "^1.8.4",
     "@sap/cds-odata-v2-adapter-proxy": "^1.9.18",
     "@sap/hana-client": "^2.15.19",
     "@sap/html5-app-deployer": "^4.2.3",
@@ -97,10 +97,10 @@
     "-Docker Build Scripts-": "",
     "/------------------------/": "",
     "build:all": "cross-var npm run build:srv && npm run build:db-com && npm run build:router && npm run build:html5-deployer && npm run build:api && npm run build:broker",
-    "build:srv": "cross-var pack build $npm_package_config_imagePrefix/susaas-srv --path gen/srv --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs --env BP_NODE_RUN_SCRIPTS=",
-    "build:db-com": "cross-var pack build $npm_package_config_imagePrefix/susaas-db-com --path gen/db-com --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs --env BP_NODE_RUN_SCRIPTS=",
-    "build:api": "cross-var pack build $npm_package_config_imagePrefix/susaas-api --path gen/api --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs --env BP_NODE_RUN_SCRIPTS=",
-    "build:broker": "cross-var pack build $npm_package_config_imagePrefix/susaas-broker --path broker --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs --env BP_NODE_RUN_SCRIPTS=",
+    "build:srv": "cross-var pack build $npm_package_config_imagePrefix/susaas-srv --path gen/srv --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs -e BP_LAUNCHPOINT=./node_modules/@sap/cds/bin/cds-serve.js",
+    "build:db-com": "cross-var pack build $npm_package_config_imagePrefix/susaas-db-com --path gen/db-com --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs -e BP_LAUNCHPOINT=./node_modules/@sap/hdi-deploy/deploy.js",
+    "build:api": "cross-var pack build $npm_package_config_imagePrefix/susaas-api --path gen/api --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs -e BP_LAUNCHPOINT=./node_modules/@sap/cds/bin/cds-serve.js",
+    "build:broker": "cross-var pack build $npm_package_config_imagePrefix/susaas-broker --path broker --builder paketobuildpacks/builder:base --buildpack gcr.io/paketo-buildpacks/nodejs -e BP_LAUNCHPOINT=./start.js",
     "build:router": "cross-var docker build -t $npm_package_config_imagePrefix/susaas-router ./router",
     "build:html5-deployer": "cross-var docker build -t $npm_package_config_imagePrefix/susaas-html5-deployer ./app/html5-deployer",
     "---------------------------": "",
