--- a/code/api/package.json
+++ b/code/api/package.json
@@ -8,21 +8,23 @@
     "node": "^16.x"
   },
   "dependencies": {
-    "@sap/cds": "^6.5.0",
-    "@sap/cds-mtxs": "^1.5.0",
+    "@sap/cds": "^6.8.4",
+    "@sap/cds-mtxs": "^1.8.4",
     "@sap/hana-client": "^2.15.19",
     "@sap/xssec": "^3.2.15",
     "passport": "^0.6.0",
     "express": "^4.18.2"
   },
   "scripts": {
-    "start": "cds run --production"
+    "start": "cds-serve"
   },
   "cds": {
     "requires": {
       "multitenancy": true,
-      "toggles": false,
-      "extensibility": false,
+      "cds.xt.ExtensibilityService": false,
+      "cds.xt.ModelProviderService": false,
+      "cds.xt.DeploymentService": false,
+      "cds.xt.SaasProvisioningService": false,
       "auth": {
         "kind": "xsuaa"
       },
