--- a/code/obd/srv/package.json
+++ b/code/obd/srv/package.json
@@ -8,7 +8,7 @@
     "node": "^16.x"
   },
   "dependencies": {
-    "@sap/cds": "^6.8.1",
+    "@sap/cds": "^6.8.4",
     "@sap/cds-odata-v2-adapter-proxy": "^1",
     "@sap/xsenv": "^3",
     "@sap/xssec": "^3.2.17",
@@ -19,7 +19,7 @@
     "cookie-parser": "^1.4.6"
   },
   "scripts": {
-    "start": "cds run --production"
+    "start": "cds-serve"
   },
   "cds": {
     "requires": {
