--- a/code/obd/package.json
+++ b/code/obd/package.json
@@ -28,12 +28,17 @@
     "@sap/ui5-builder-webide-extension": "^1.1.8",
     "@sap/html5-app-deployer": "^4.2.3",
     "@sap/ux-specification": "^1.96.4",
-    "@ui5/cli": "^2.14.14",
+    "@ui5/cli": "^3.3.0",
     "cross-var": "^1.1.0",
     "jest": "^29.0.1",
     "mbt": "^1.2.18",
     "shx": "^0.3.4",
     "ui5-task-zipper": "^0.5.1"
+  },
+  "overrides": {
+    "cross-var": {
+      "json5": "^2.2.3"
+    }
   },
   "scripts": {
     "test": "jest",
